Perceptron with Sci-kit_learn

--- a/Sci-kit-learn/scikit-learn notebook.ipynb
+++ b/Sci-kit-learn/scikit-learn notebook.ipynb
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -1596,10 +1596,42 @@
        " 'Sawyer',\n",
        " 'SawyerW',\n",
        " 'Somerst',\n",
+       " 'Timber',\n",
+       " 'BrkSide',\n",
+       " 'CollgCr',\n",
+       " 'Crawfor',\n",
+       " 'Edwards',\n",
+       " 'Gilbert',\n",
+       " 'IDOTRR',\n",
+       " 'Mitchel',\n",
+       " 'NAmes',\n",
+       " 'NWAmes',\n",
+       " 'NoRidge',\n",
+       " 'NridgHt',\n",
+       " 'OldTown',\n",
+       " 'Sawyer',\n",
+       " 'SawyerW',\n",
+       " 'Somerst',\n",
+       " 'Timber',\n",
+       " 'BrkSide',\n",
+       " 'CollgCr',\n",
+       " 'Crawfor',\n",
+       " 'Edwards',\n",
+       " 'Gilbert',\n",
+       " 'IDOTRR',\n",
+       " 'Mitchel',\n",
+       " 'NAmes',\n",
+       " 'NWAmes',\n",
+       " 'NoRidge',\n",
+       " 'NridgHt',\n",
+       " 'OldTown',\n",
+       " 'Sawyer',\n",
+       " 'SawyerW',\n",
+       " 'Somerst',\n",
        " 'Timber']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,22 +1644,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[    1,  8450,     7, ...,     0,     0,     0],\n",
-       "       [    1, 11250,     7, ...,     0,     0,     0],\n",
-       "       [    1,  9550,     7, ...,     0,     0,     0],\n",
-       "       ...,\n",
-       "       [    1,  9042,     7, ...,     0,     0,     0],\n",
-       "       [    1,  9717,     5, ...,     0,     0,     0],\n",
-       "       [    1,  9937,     5, ...,     0,     0,     0]], dtype=int64)"
+       "array([[    1,  8450,     7,     5,   856,   854,     3,     5,     0,\n",
+       "            0,     0,     1,     1,     1,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0],\n",
+       "       [    1, 11250,     7,     5,   920,   866,     3,     7,     0,\n",
+       "            0,     0,     1,     1,     1,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0],\n",
+       "       [    1,  9550,     7,     5,   961,   756,     3,    91,     0,\n",
+       "            0,     0,     0,     0,     0,     1,     1,     1,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0],\n",
+       "       [    1, 14260,     8,     5,  1145,  1053,     4,     8,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     1,\n",
+       "            1,     1,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0],\n",
+       "       [    1, 14115,     5,     5,   796,   566,     1,    16,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     1,\n",
+       "            1,     1,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "            0,     0]], dtype=int64)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1697,7 @@
     "X = housing[features].values\n",
     "y = housing[target].values\n",
     "n = housing.shape[0]\n",
-    "X"
+    "X[:5]"
    ]
   },
   {
@@ -1686,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,20 +1828,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "eid": "1cb0c84e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([206597.52061703])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TASK --- Predict price of new_house1\n",
     "## Remember, features are ['CentralAir', 'LotArea', 'OverallQual', 'OverallCond',\n",
-    "## '1stFlrSF', '2ndFlrSF', 'BedroomAbvGr', 'Age', 'Neighborhood']\n"
+    "## '1stFlrSF', '2ndFlrSF', 'BedroomAbvGr', 'Age', 'Neighborhood']\n",
+    "pred1 = np.array([    1,  8450,     7,     5,   856,   854,     3,     5,     0,\n",
+    "            0,     0,     1,     1,     1,     0,     0,     0,     0,\n",
+    "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+    "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+    "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+    "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+    "            0,     0]).reshape(1,56)\n",
+    "\n",
+    "lr.predict(pred1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "eid": "bfad23e3"
    },
@@ -1789,6 +1869,13 @@
    "source": [
     "# TASK --- Predict price of new_house2\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
